<resources>
    <string name="app_name">我的课程</string>

    <string name="text_username">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_retain_password">记住密码</string>
    <string name="text_navigation_drawer_open">Open navigation drawer</string>
    <string name="text_navigation_drawer_close">Close navigation drawer</string>

    <string name="text_timetable_name">课程表名</string>
    <string name="text_timetable_duration">课时长</string>
    <string name="text_timetable_week_count">周数</string>
    <string name="text_timetable_start_time">开始时间</string>
    <string name="text_choose_date">选择时间</string>
    <string name="text_prompt">提示</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>

    <string name="prompt_load_message">加载中……</string>
    <string name="prompt_select_timetable_first">请先选择课表！</string>
    <string name="prompt_select_week">请设置该课程在星期几！</string>
    <string name="prompt_select_section">请设置该课程在第几节！</string>
    <string name="prompt_select_timetable">请先选择课表！</string>


    <string name="hint_register">注册></string>
    <string name="hint_timetable_name">课程表名:</string>
    <string name="hint_timetable_term">学期:</string>
    <string name="hint_timetable_week_count">周数:</string>
    <string name="hint_timetable_class_duration">课时长(分钟):</string>
    <string name="hint_timetable_start_date">开始时间:</string>
    <string name="hint_section">节数:</string>
    <string name="hint_class_start_time">开始时间:</string>
    <string name="hint_course_name">课程名:</string>
    <string name="hint_course_number">课程编号:</string>
    <string name="hint_course_timetable">课表:</string>
    <string name="hint_course_teacher_name">教师:</string>
    <string name="hint_course_address">教室:</string>
    <string name="hint_course_day_in_week">星期:</string>
    <string name="hint_course_section">节次:</string>
    <string name="hint_course_start_week">开始周次:</string>
    <string name="hint_course_end_week">结束周次:</string>
    <string name="hint_description">描述</string>

    <string name="tip_login_failed">用户名或者密码错误！</string>
    <string name="tip_register_success">注册成功！</string>
    <string name="tip_register_failed">该用户已注册！</string>
    <string name="tip_course">课程:</string>
    <string name="tip_course_add">输入课程名,课程编号以及课程描述,描述可为空</string>
    <string name="tip_timetable_add_class_null">你还没有配置课程信息，请先添加课程信息！</string>
    <string name="tip_timetable_null">你还没有添加课表，请先添加课表！</string>
    <string name="tip_timetable_add_term_already_exist">该学期课表已存在，请重新选择！</string>
    <string name="tip_timetable_add_delete_class">是否要删除%1$s这个课表配置吗?</string>
    <string name="tip_course_add_delete">是否要删除星期%1$d的%2$s课程吗?</string>

    <string name="error_username_empty">用户名为空！</string>
    <string name="error_password_empty">密码为空！</string>
    <string name="error_password_too_short">密码低于6位！</string>
    <string name="error_password_inconsistent">密码不一致！</string>
    <string name="error_course_name_empty">课程名为空！</string>
    <string name="error_course_number_empty">课程编号为空！</string>
    <string name="error_timetable_name_empty">课表名为空！</string>
    <string name="error_timetable_duration_empty">课程时长为空！</string>
    <string name="error_timetable_term_empty">学期为空！</string>
    <string name="error_timetable_week_empty">周数为空！</string>
    <string name="error_timetable_start_date_empty">课表开始时间为空！</string>
    <string name="error_course_address_null">教室不能为空！</string>

    <string name="label_my_course">我的课程</string>
    <string name="label_login">登录</string>
    <string name="label_register">注册</string>
    <string name="label_course_add">课程添加</string>
    <string name="label_course_update">课程更新</string>
    <string name="label_course_info_add">课程信息添加</string>
    <string name="label_course_info_update">课程信息更新</string>
    <string name="label_timetable">我的课表</string>
    <string name="label_timetable_add">新增课表</string>
    <string name="label_timetable_update">更新课表</string>
    <string name="label_timetable_property">课程配置</string>

    <string name="menu_title_course">课程</string>
    <string name="menu_item_timetable">我的课表</string>
    <string name="menu_item_user_guide">用户指南</string>
    <string name="menu_item_setting">设置</string>
    <string name="menu_item_quit">退出</string>
    <string name="menu_item_timetable_add">添加课信息</string>


</resources>
