<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@drawable/shape_rect"
            android:divider="@color/divider_color"
            android:orientation="vertical"
            android:paddingStart="@dimen/normal_padding"
            android:paddingEnd="@dimen/normal_padding"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_item_height"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/hint_timetable_name" />

                <EditText
                    android:id="@+id/timetable_add_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timetable_add_duration_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_item_height"
                android:onClick="onClick"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/hint_timetable_class_duration" />

                <TextView
                    android:id="@+id/timetable_add_duration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timetable_add_week_count_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_item_height"
                android:onClick="onClick"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/hint_timetable_term" />

                <TextView
                    android:id="@+id/timetable_add_week_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end|center_vertical"
                    tools:text="ssss"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timetable_add_date_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_item_height"
                android:onClick="onClick"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/hint_timetable_start_date" />

                <TextView
                    android:id="@+id/timetable_add_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end|center_vertical" />

            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/common_recycler_view" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>